изменила пути к файлам

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doggie</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="/.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,14 +36,14 @@
                     <p class="welcome__paragraph">3-time walking and training with a dog trainer</p>
                 <button class="welcome__btn">Callback</button>
                 </div>
-                <img class="welcome__img" src="/img/welcome.webp" alt="img">
+                <img class="welcome__img" src="img/welcome.webp" alt="img">
             </div>
         </section>
 
         <section id="hotel" class="hotel">
             <div class="hotel__container">
                 <div class="hotel__img-wrapper">
-                    <img src="/img/reception.jpg" alt="img">
+                    <img src="img/reception.jpg" alt="img">
                 </div>
                 <div class="hotel__desc">
                     <p class="hotel__text">Our hotel offers your pet comfortable living conditions away from home. We take care of each four-legged guest individually</p>
@@ -53,7 +53,7 @@
                     <button class="hotel__btn">Callback</button>
                 </div>
                 <div class="hotel__img-wrapper">
-                    <img src="/img/дельта.jpg" alt="img">
+                    <img src="img/дельта.jpg" alt="img">
                 </div>
             </div>
         </section>
